--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
     <properties>
         <java.version>1.8</java.version>
+
+        <version.fabric8.plugin>3.5.38</version.fabric8.plugin>
+        <fabric8.generator.fromMode>istag</fabric8.generator.fromMode>
+        <fabric8.generator.from>redhat-openjdk18-openshift:1.0</fabric8.generator.from>
+
     </properties>
 
     <dependencies>
@@ -43,6 +48,23 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>${version.fabric8.plugin}</version>
+
+                <executions>
+                    <execution>
+                        <id>fmp</id>
+                        <goals>
+                            <goal>resource</goal>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
