--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,13 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.edw.test</groupId>
-    <artifactId>demo</artifactId>
-    <version>1.0.1</version>
-    <name>demo</name>
+    <artifactId>HelloWorld</artifactId>
+    <version>1.0.2</version>
+    <name>Hello World</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
-
-        <version.fabric8.plugin>3.5.38</version.fabric8.plugin>
-        <fabric8.generator.fromMode>istag</fabric8.generator.fromMode>
-        <fabric8.generator.from>redhat-openjdk18-openshift:1.0</fabric8.generator.from>
-
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -50,16 +45,14 @@
             </plugin>
 
             <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>fabric8-maven-plugin</artifactId>
-                <version>${version.fabric8.plugin}</version>
-
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
                 <executions>
                     <execution>
-                        <id>fmp</id>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
                         <goals>
-                            <goal>resource</goal>
-                            <goal>build</goal>
+                            <goal>deploy</goal>
                         </goals>
                     </execution>
                 </executions>
